--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/houdamzari/Hello-World/issues"
   },
-  "homepage": "https://github.com/houdamzari/Hello-World#readme",
-  "devDependencies": {
-    "hint": "^7.1.3"
-  }
+  "homepage": "https://github.com/houdamzari/Hello-World#readme"
 }
